# STIR2PETSIRD

./: .gitignore  README.md  environment.yml  justfile
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
cpp/: CMakeLists.txt  README.md  STIR_PETSIRD_convertor.cpp  STIR_PETSIRD_convertor.h  build_STIR_PETSIRD_convertor.sh  convertor_helpers.h
cpp/cmake/: STIR2PETSIRDConfig.cmake.in
cpp/tests/: test_stir2petsird.cxx
python/: README.md  analysis.py  start.py
utilities/: install_stir.sh
